force-app/main/default/objects/QR_Config__mdt/QR_Config__mdt.object-meta.xml
<CustomObject>
    <label>QR Config</label>
    <pluralLabel>QR Configs</pluralLabel>
</CustomObject>