force-app/main/default/objects/QR_Config__mdt/fields/CreditorRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>CreditorRecordTypeId__c</fullName>
    <label>Creditor Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>