force-app/main/default/objects/QR_Config__mdt/fields/FrequencyValues__c.field-meta.xml
<CustomField>
    <fullName>FrequencyValues__c</fullName>
    <label>Frequency Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>