force-app/main/default/objects/QR_Config__mdt/fields/SettlementPercent__c.field-meta.xml
<CustomField>
    <fullName>SettlementPercent__c</fullName>
    <label>Settlement Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>